--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-    
+    <h1>Soy mas que piel</h1>
+    <footer class="footer container-fluid">
+        <div class="row">
+            <div class="col-lg-2">
+               <div class="redes"><a href="instagram.com" target="_blank"><img src="media/redes/logo_instagram.svg" alt="instagram"></a>
+                    </div>
+            </div>
+            <div class="col-lg-2">
+
+            </div>
+            <div class="col-lg-2">
+
+            </div>
+            <div class="col-lg-2">
+
+            </div>
+            <div class="col-lg-4">
+
+            </div>
+        </div>
+        
+    </footer>
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>    
