agregue banners a todas las paginas hice pagina sobre mi y comunidad

--- a/comunidad.html
+++ b/comunidad.html
@@ -27,6 +27,23 @@
 
     <!-------------------------------------FIN HEADER-------------------------------------->
 
+        <div class="banner">
+           <img src="media/comunidad/comunidad_01.png" class="img-fluid" alt="">
+        </div>
+
+        <div class="section-info">
+            <div class="container text-left mb-5 mt-5">
+                <div class="centro-info row">
+                    <div class="col">
+                        <h2>COMUNIDAD MÁS QUE PIEL</h2>
+                            <p>Bienvenidx a la comunidad Más que piel! ❤: Somos un grupo de apoyo para seguir #AportandoTuGranito y cambiar este mundo donde prima el estigma de las condiciones de piel. Por eso estamos acá para compartir experiencias, contenernos, escucharnos y aprender a ser empáticos con nosotros mismos.</P>
+                            <p>Así que si sentís que necesitas apoyo o simplemente querés compartir con nosotros este camino de empoderamiento y amor propio, este es tu grupo!</p>
+                            <p>Recorda siempre: Tu piel no define tu belleza</p>
+                    </div>            
+                </div>         
+            </div>     
+       </div>
+
         <!-------------------------------------FOOTER-------------------------------------->
     <!-- TODO: agregar links correctos -->
     <footer class="footer container-fluid">
