--- a/sobremi.html
+++ b/sobremi.html
@@ -27,6 +27,22 @@
 
     <!-------------------------------------FIN HEADER-------------------------------------->
 
+        <div class="banner">
+           <img src="media/sobre_mi/sobremi_01.png" class="img-fluid" alt="">
+        </div>
+
+        <div class="section-info">
+            <div class="container text-left mb-5 mt-5">
+                <div class="centro-info row">
+                    <div class="col">
+                        <h2>SOBRE MI</h2>
+                            <p>Hola! Soy Maca Ruiz Bruno, maquilladora y estudiante avanzada de Tec. Cosmetóloga de UBA. Apasionada del mundo de la belleza y el skincare.</p>
+                            <p>Brindo servicios de maquilladora profesional y docencia desde un enfoque positivo de piel, entendiendo la belleza como un acto de amor propio y salud.</p>
+                    </div>            
+                </div>         
+            </div>     
+       </div>
+
         <!-------------------------------------FOOTER-------------------------------------->
     <!-- TODO: agregar links correctos -->
     <footer class="footer container-fluid">
