--- a/auto-basico.html
+++ b/auto-basico.html
@@ -27,6 +27,10 @@
 
     <!-------------------------------------FIN HEADER-------------------------------------->
 
+        <div class="banner">
+           <img src="media/cursos/cursos_basicos_01.png" class="img-fluid" alt="">
+        </div>
+
         <!-------------------------------------FOOTER-------------------------------------->
     <!-- TODO: agregar links correctos -->
     <footer class="footer container-fluid">
